--- a/templates/_base.html
+++ b/templates/_base.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap Site</title>
+  <title>{% block title %}{% endblock title %}</title>
   <link rel="icon" type="image/ico" href="{% static 'favicon.ico' %}">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/app.css' %}">
   <link rel="stylesheet" type="text/css" href={% static 'css/base.css' %}>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous" defer></script>
 
@@ -15,15 +16,12 @@
 <body>
 <header>
     <nav class="navbar navbar-expand-md bg-dark bg-gradient navbar-dark sticky-top">
-        <a class="navbar-brand ms-1" href="#"> {% block title %}Portfolio Tracker{% endblock title %} </a>
+        <a class="navbar-brand ms-1" href="#"> Portfolio Tracker </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navb" aria-expanded="true">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div id="navb" class="navbar-collapse collapse">
           <ul class="navbar-nav">
-            <li class="nav-item active" aria-current="page" >
-              <a class="nav-link" href="#">Home</a>
-            </li>
           </ul>
       
           <ul class="nav navbar-nav ms-auto">
@@ -45,18 +43,17 @@
           </ul>
         </div>
       </nav>
-
 </header>
   {% if messages %}
-  <ul>
       {% for message in messages %}
-      <div class="alert alert-{% if message.tags %}{{ message.tags }}{% endif %}">{{ message }}</li>
+      <div class="alert  p-2 alert-{% if message.tags %}{{ message.tags }}{% endif %} alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="btn-close pb-2" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
       {% endfor %}
-  </ul>
   {% endif %}
-      <div>
-        {% block content %}
-        {% endblock content %}
-      </div>    
+  </div>
+{% block content %}
+{% endblock content %}
 </body>
 </html>
